external-crates/move/crates/move-compiler/tests/move_2024/verification/spec_only_do_filter_function.move
// filter out spec_only function, while should lead to error

module a::m {
    public fun foo() {
        bar()
    }

    #[verify_only]
    public fun bar() {
    }
}
